Fix indentation issues.

--- a/index.html
+++ b/index.html
@@ -3,113 +3,107 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Adam Zimmermann</title>
+    <meta name="description" content="Personal portfolio site for Adam Zimmermann">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-        </style>
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/main.css">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-        <style type="text/css">
-          body {
-            padding-top: 20px;
-            padding-bottom: 40px;
-          }
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <style type="text/css">
+      body {
+        padding-top: 20px;
+        padding-bottom: 40px;
+      }
 
-          /* Custom container */
-          .container-narrow {
-            margin: 0 auto;
-            max-width: 700px;
-          }
-          .container-narrow > hr {
-            margin: 30px 0;
-          }
+      /* Custom container */
+      .container-narrow {
+        margin: 0 auto;
+        max-width: 700px;
+      }
+      .container-narrow > hr {
+        margin: 30px 0;
+      }
 
-          /* Main marketing message and sign up button */
-          .jumbotron {
-            margin: 60px 10px;
-            padding: 30px;
-            text-align: center;
-          }
-          .jumbotron h1 {
-            font-size: 72px;
-            line-height: 1;
-            padding-bottom: 30px;
-          }
-          .jumbotron .btn {
-            font-size: 21px;
-            padding: 14px 24px;
-          }
+      /* Main marketing message and sign up button */
+      .jumbotron {
+        margin: 60px 10px;
+        padding: 30px;
+        text-align: center;
+      }
+      .jumbotron h1 {
+        font-size: 72px;
+        line-height: 1;
+        padding-bottom: 30px;
+      }
+      .jumbotron .btn {
+        font-size: 21px;
+        padding: 14px 24px;
+      }
 
-          /* Supporting marketing content */
-          .marketing {
-            margin: 60px 0;
-          }
-          .marketing p + h4 {
-            margin-top: 28px;
-          }
-          .muted {
-            padding-top: 10px;
-          }
-          .social-links {
-            text-align: center;
-          }
-          .nav-pills {
-            display: inline-block;
-          }
-        </style>
-    </head>
-    <body>
-      <!--[if lt IE 8]>
-          <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-      <![endif]-->
+      /* Supporting marketing content */
+      .marketing {
+        margin: 60px 0;
+      }
+      .marketing p + h4 {
+        margin-top: 28px;
+      }
+      .muted {
+        padding-top: 10px;
+      }
+      .social-links {
+        text-align: center;
+      }
+      .nav-pills {
+        display: inline-block;
+      }
+    </style>
+  </head>
+  <body>
+    <!--[if lt IE 8]>
+        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 
-      <div class="container-narrow">
+    <div class="container-narrow">
 
-          <div class="jumbotron">
-            <h1>I love being creative and solving problems.</h1>
-            <p class="lead">I am a web developer for <a href="http://chromaticsites.com">CHROMATIC</a>.</p>
-          </div>
+      <div class="jumbotron">
+        <h1>I love being creative and solving problems.</h1>
+        <p class="lead">I am a web developer for <a href="http://chromaticsites.com">CHROMATIC</a>.</p>
+      </div>
 
-          <div class="social-links">
-            <ul class="nav nav-pills">
-              <li><a href="https://twitter.com/adam2740">Twitter</a></li>
-              <li><a href="https://github.com/adamzimmermann/">Github</a></li>
-              <li><a href="http://drupal.org/user/1152646">Drupal</a></li>
-              <li><a href="http://flickr.com/adamzimmermann">Flickr</a></li>
-              <li><a href="http://linkedin.com/in/adamzimmermann">LinkedIn</a></li>
-            </ul>
-          </div>
+      <div class="social-links">
+        <ul class="nav nav-pills">
+          <li><a href="https://twitter.com/adam2740">Twitter</a></li>
+          <li><a href="https://github.com/adamzimmermann/">Github</a></li>
+          <li><a href="http://drupal.org/user/1152646">Drupal</a></li>
+          <li><a href="http://flickr.com/adamzimmermann">Flickr</a></li>
+          <li><a href="http://linkedin.com/in/adamzimmermann">LinkedIn</a></li>
+        </ul>
+      </div>
 
-        </div> <!-- /container -->
+    </div> <!-- /container -->
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
 
-        <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-21198121-2','auto');ga('send','pageview');
-        </script>
-    </body>
+    <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-21198121-2','auto');ga('send','pageview');
+    </script>
+  </body>
 </html>
