--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Adam Zimmermann</title>
+    <title>Adam Zimmermann | Web Developer</title>
     <meta name="description" content="Personal portfolio site for Adam Zimmermann">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -87,7 +87,7 @@
         </ul>
       </div>
 
-    </div> <!-- /container -->
+    </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
