--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Personal portfolio site for Adam Zimmermann">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
