--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="social-links">
         <ul class="nav nav-pills">
           <li><a href="https://twitter.com/adam2740">Twitter</a></li>
-          <li><a href="https://github.com/adamzimmermann/">Github</a></li>
+          <li><a href="https://github.com/adamzimmermann/">GitHub</a></li>
           <li><a href="http://drupal.org/user/1152646">Drupal</a></li>
           <li><a href="http://flickr.com/adamzimmermann">Flickr</a></li>
           <li><a href="http://linkedin.com/in/adamzimmermann">LinkedIn</a></li>
